# lekiwi-heartbeat

./: .gitignore  DEPLOYMENT-DOCS-CONSOLIDATION.md  DEPLOYMENT-SYSTEM.md  IMPLEMENTATION_SUMMARY.md  PROJECT_DOCUMENTATION.md  README-DEPLOYMENT-SYSTEM.md  README-DEPLOYMENT.md  README.md  deployment-architecture.md  initial plan draft 1  install.sh  quick-start-deployment.md  requirements.txt  start-deployment-system.sh  vercel-for-robots.md
architecture/: lekiwi-heartbeat-architecture.md
config/: system_config.yaml
deployment-agent/: agent.py  install.sh
deployment-cli/: lekiwi-complete  lekiwi-deploy
deployment-gun/: P2P-SECURITY-ARCHITECTURE.md  gun-deployment-server.py  gun-robot-agent.py
deployment-master/: lekiwi-master-deploy.py  lekiwi-robot-deploy.sh
deployment-server/: DISCOVERY_FIX_SUMMARY.md  add_discovered_robots.py  comparison_config.json  comparison_engine.py  detect_robot_type.py  discover_robots.py  install.sh  install_xlerobot.sh  rename_xlerobot.py  rename_xlerobot_ssh.sh  robot_versioning.py  server.py  server_discovery.py  setup_env.sh  smart_discover.py  test_comparison.py  test_discovery_fix.py  test_discovery_improvements.py  test_xlerobot_detection.py
deployment-ssh/: ssh-proxy-server.py
deployment-tunnel/: reverse-tunnel-system.py
executive-summary/: lekiwi-heartbeat-transformation.md
factory-install/agent/: Cargo.toml
factory-install/agent/src/: main.rs
migration/: README.md  docker-compose.new.yml  migration-plan.md
migrations/: 001_initial_schema.sql
refactoring/: 00_executive_summary.md  02_implementation_phases.md  (+2 more)
(+39 files in other folders)
