[package]
name = "lekiwi-agent"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sysinfo = "0.30"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
rustls = "0.22"
rustls-pemfile = "2.0"
futures = "0.3"
axum = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.27", features = ["fs"] }
rppal = "0.17"  # For Raspberry Pi GPIO access

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols for smaller binary
panic = "abort"     # Smaller panic handler

[build-dependencies]
cc = "1.0"